--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "d3": "^7.8.5",
     "dagre": "^0.8.5",
     "elkjs": "^0.8.2",
     "eslint": "8.47.0",
@@ -22,6 +23,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flow-renderer": "^10.3.17",
+    "react-force-graph-2d": "^1.25.0",
+    "react-graph-vis": "^1.0.7",
+    "react-query": "^3.39.3",
     "reactflow": "^11.8.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
