--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-force-graph-2d": "^1.25.0",
     "react-graph-vis": "^1.0.7",
     "react-query": "^3.39.3",
+    "react-youtube": "^10.1.0",
     "reactflow": "^11.8.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
