--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "d3": "^7.8.5",
     "dagre": "^0.8.5",
     "elkjs": "^0.8.2",
@@ -28,7 +32,9 @@
     "react-query": "^3.39.3",
     "react-youtube": "^10.1.0",
     "reactflow": "^11.8.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
   },
   "devDependencies": {
