--- a/backend/package.json
+++ b/backend/package.json
@@ -6,19 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "generate": "drizzle-kit generate:pg"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.28.6",
     "express": "^4.18.2",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "postgres": "^3.3.5",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "drizzle-kit": "^0.19.13",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
