--- a/frontend/.env
+++ b/frontend/.env
@@ -3,3 +3,4 @@
 
 ENV_VARIABLE=production_server_only_variable
 NEXT_PUBLIC_ENV_VARIABLE=production_public_variable
+NEXT_PUBLIC_BE_URL=http://localhost:3001/
