--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "elkjs": "^0.8.2",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "framer-motion": "^10.16.4",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -30,14 +31,18 @@
     "react-force-graph-2d": "^1.25.0",
     "react-graph-vis": "^1.0.7",
     "react-query": "^3.39.3",
+    "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0",
     "reactflow": "^11.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "valtio": "^1.11.2"
   },
   "devDependencies": {
-    "@types/dagre": "^0.7.49"
+    "@types/dagre": "^0.7.49",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
