--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/server.ts",
     "start": "node ./dist/src/server.js",
     "build": "tsc",
-    "generate": "drizzle-kit generate:pg"
+    "generate": "drizzle-kit generate:pg",
+    "push-db": "drizzle-kit push:pg"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,8 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "express": "^4.18.2",
-    "openai": "^3.3.0",
+    "openai": "^4.10.0",
+    "pg": "^8.11.3",
     "postgres": "^3.3.5",
     "zod": "^3.22.2"
   },
@@ -25,9 +27,9 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "drizzle-kit": "^0.19.13",
+    "my-types": "workspace:*",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "my-types": "workspace:*"
+    "typescript": "^5.2.2"
   }
 }
