--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
     "dagre": "^0.8.5",
+    "debounce": "^1.2.1",
     "elkjs": "^0.8.2",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
@@ -26,6 +27,7 @@
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-auto-resizable-box": "^1.0.6",
     "react-dom": "18.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-force-graph-2d": "^1.25.0",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@types/dagre": "^0.7.49",
+    "@types/debounce": "^1.2.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4"
   }
